# sun.kist

./: README.md  pyproject.toml
src/1일차/: Day_1_(Additional)_Prompt_Engineering_Automation_(Prompt_Bench).ipynb
src/2일차/: Day2_RAG_ChatGPT.ipynb
src/3일차/: Day3_RAG_agent.ipynb  sun_kist_agent.py  sun_kist_agent_streamlit.py
필기/: 1일차.md  2일차.md
