[tool.poetry]
name = "sun-kist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sun"}]

[tool.poetry.dependencies]
python = "^3.11"
llmlingua = "^0.2.2"
openai = "1.3.7"
promptbench = "^0.0.4"
httpx = "0.27.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
